# reversejp

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: release-python.yml  release-rust.yml  release-wasm.yml  test.yml
reversejp-maps/: .gitignore  README.md  index.ts  package.json
reversejp-maps/public/: index.html  styles.css
reversejp-maps/src/: app.ts
reversejp-python/: Cargo.toml  Makefile  pyproject.toml  reversejp.pyi
reversejp-python/examples/: cli.py  demo.py
reversejp-python/src/: lib.rs
reversejp-python/tests/: test_cities.py
reversejp-rust/: Cargo.toml  Makefile
reversejp-rust/benches/: jp_city_lookup.rs
reversejp-rust/examples/: demo.rs  load_all_landslides.rs  reverse_lookup.rs
reversejp-rust/src/: lib.rs
reversejp-wasm/: Cargo.toml  Makefile  README.md
reversejp-wasm/example/: .gitignore  index.ts  package.json
reversejp-wasm/example/public/: styles.css
reversejp-wasm/preview/: index.html
reversejp-wasm/src/: lib.rs
scripts/: download.py
