[project]
name = "project-reversejp"
version = "0.1.0"
description = "ReverseJP Python Binding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["reversejp-python"]

[dependency-groups]
dev = [
    "requests==2.32.5",
    "ruff==0.14.0",
    "reversejp",
]

[tool.uv.sources]
reversejp = { workspace = true }
