[package]
name = "reversejp-python"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "reversejp"
crate-type = ["cdylib"]

[dependencies]
reversejp = { path = "../reversejp-rust" }  # Reference the parent project
pyo3 = {version = "0.24.0", features = ["extension-module", "generate-import-lib", "abi3-py39"]}
