[package]
name = "reversejp-python"
version = "0.2.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.release]
release = false

[lib]
name = "reversejp"
crate-type = ["cdylib"]

[dependencies]
reversejp = { path = "../reversejp-rust" }  # Reference the parent project
pyo3 = {version = "0.28.2", features = ["extension-module", "generate-import-lib", "abi3-py310"]}
