[project]
name = "reversejp"
description = "Japan Geo Reverse Lookup"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = []
readme = "README.md"

[project.urls]
Documentation = "https://github.com/ringsaturn/reversejp"
"Source Code" = "https://github.com/ringsaturn/reversejp"

[build-system]
requires = ["maturin>=1.8.3"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ruff==0.11.7",
    "citiespy==0.6.11",
    "ipython==9.2.0",
    "maturin==1.8.3",
    "pytest==8.3.5",
    "pytest-benchmark==5.1.0",
    "pytest-cov==6.0.0",
]

[tool.maturin]
profile = "release"
bindings = "pyo3"
cargo-extra-args = "--features python-extension"
include = ["reversejp.pyi"]
