[project]
name = "reversejp"
description = "Japan Geo Reverse Lookup"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []
readme = "README.md"

[project.urls]
Documentation = "https://github.com/ringsaturn/reversejp"
"Source Code" = "https://github.com/ringsaturn/reversejp"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ruff==0.14.0",
    "citiespy==0.6.13",
    "maturin==1.9.6",
    "pytest==8.4.2",
    "pytest-benchmark==5.1.0",
    "pytest-cov==7.0.0",
]

[tool.maturin]
profile = "release"
bindings = "pyo3"
cargo-extra-args = "--features python-extension"
include = ["reversejp.pyi"]
