[project]
name = "reversejp"
description = "Japan Geo Reverse Lookup"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = []
readme = "README.md"

[project.urls]
Documentation = "https://github.com/ringsaturn/reversejp"
"Source Code" = "https://github.com/ringsaturn/reversejp"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ruff==0.15.12",
    "citiespy==0.6.13",
    "maturin==1.13.1",
    "pytest==9.0.3",
    "pytest-benchmark==5.2.3",
    "pytest-cov==7.1.0",
]

[tool.maturin]
profile = "release"
bindings = "pyo3"
cargo-extra-args = "--features python-extension"
include = ["reversejp.pyi"]
