[package]
name = "reversejp"
version = "0.1.3"
edition = "2024"
license = "MIT"
authors = ["ringsaturn <ringsaturn.me@gmail.com>"]
description = "ReverseJP is a Rust library for reverse geocoding in Japan."
homepage = "https://github.com/ringsaturn/reversejp"
repository = "https://github.com/ringsaturn/reversejp"
readme = "README.md"

[dependencies]
geometry-rs = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zip = "6.0.0"

[dev-dependencies]
cities-json = "0.6.8"
criterion = "0.7"
lazy_static = "1.5.0"
rand = "0.9.2"

[[bench]]
name = "jp_city_lookup"
harness = false
