[package]
name = "reversejp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
geometry-rs = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zip = "6.0.0"

[dev-dependencies]
cities-json = "0.6.8"
criterion = "0.7"
lazy_static = "1.5.0"
rand = "0.9.2"

[[bench]]
name = "jp_city_lookup"
harness = false
