[package]
name = "reversejp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
geometry-rs = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zip = "8.6.0"

[dev-dependencies]
cities-json = "0.6.8"
criterion = "0.8"
lazy_static = "1.5.0"
rand = "0.10.1"

[[bench]]
name = "jp_city_lookup"
harness = false
