[package]
name = "reversejp-wasm"
version = "0.1.4"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reversejp = { path = "../reversejp-rust" }  # Reference the parent project
wasm-bindgen = "0.2.104"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
js-sys = "0.3.81"
once_cell = "1.20"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
