[package]
name = "reversejp-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reversejp = { path = "../reversejp-rust" }  # Reference the parent project
wasm-bindgen = "0.2.104"
getrandom = { version = "0.4", features = ["wasm_js"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
js-sys = "0.3.81"
once_cell = "1.20"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
